--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,27 +89,13 @@
             android:orientation="horizontal">
 
 
-            <ImageView
-                android:id="@+id/imageView22"
-                android:layout_width="126dp"
-                android:layout_height="99dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="88dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginEnd="114dp"
-                android:layout_marginBottom="302dp"
-                app:srcCompat="@drawable/iconlogo" />
-
             <EditText
                 android:id="@+id/editText2"
                 android:layout_width="256dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="44dp"
+                android:layout_marginEnd="38dp"
                 android:layout_marginBottom="127dp"
                 android:ems="10"
                 android:inputType="textPassword" />
@@ -121,7 +107,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="251dp"
-                android:layout_marginBottom="280dp"
+                android:layout_marginBottom="243dp"
                 android:text="E - Mail" />
 
             <EditText
@@ -130,8 +116,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="222dp"
+                android:layout_marginEnd="31dp"
+                android:layout_marginBottom="197dp"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
 
@@ -142,7 +128,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="234dp"
-                android:layout_marginBottom="183dp"
+                android:layout_marginBottom="177dp"
                 android:text="Password" />
 
             <TextView
@@ -175,6 +161,29 @@
                 android:layout_marginEnd="91dp"
                 android:layout_marginBottom="75dp"
                 android:text="LOG IN" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="105dp"
+                android:layout_marginTop="34dp"
+                android:layout_marginEnd="98dp"
+                android:layout_marginBottom="315dp" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="133dp"
+                android:layout_marginBottom="286dp"
+                android:text="---- Or ----" />
 
         </RelativeLayout>
 
